# SubgraphQuery

./: .gitignore  2dFullTreeQuery.cpp  CMakeLists.txt  README.md  colorCoding.cpp  degTreeQuery.cpp  easyQueries.cpp  egonet.cpp  graph.h  graphBase.cpp  matchCommunity.cpp  query.cpp  stub.txt  subgraphSample.cpp  test.cpp  utils.h
decompositions/: 2cycle5_a.qd  2cycle5_a.txt  2cycle5_b.txt  brain1.qd  brain1.txt  brain3.qd  brain3.txt  cycle3.qd  cycle3.txt  empty.txt  glet2.qd  glet2.txt  star4.qd  test.qd  tri13.qd  wiki.qd
doc/: doc.md
result_analysis/: plot_privacy.py
tests/: CMakeLists.txt  query2dFullTree.cpp  queryStar.cpp  queryStarHard.cpp  subgraphGen.cpp  tempTest.cpp  tempTest2.cpp  tempTest_er.cpp  test2dFullTree.cpp  testColorCoding.cpp  testColorCoding_SpecialQ.cpp  testEgonet.cpp  testStar.cpp  testStarHard.cpp
