cmake_minimum_required(VERSION 2.8)

add_executable(testStar testStar.cpp)
add_executable(test2dFullTree test2dFullTree.cpp)
add_executable(subgraphGen subgraphGen.cpp)
add_executable(testColorCoding testColorCoding.cpp)
add_executable(testColorCoding_SpecialQ testColorCoding_SpecialQ.cpp)
add_executable(testEgonet testEgonet.cpp)
add_executable(tempTest tempTest.cpp)
add_executable(tempTest2 tempTest2.cpp)
add_executable(tempTest_er tempTest_er.cpp)

target_link_libraries(testStar graph -lgmpxx -lgmp)
target_link_libraries(test2dFullTree graph -lgmpxx -lgmp)
target_link_libraries(subgraphGen graph -lgmpxx -lgmp)
target_link_libraries(testColorCoding graph -lgmpxx -lgmp)
target_link_libraries(testColorCoding_SpecialQ graph -lgmpxx -lgmp)
target_link_libraries(testEgonet graph -lgmpxx -lgmp)
target_link_libraries(tempTest graph -lgmpxx -lgmp)
target_link_libraries(tempTest2 graph -lgmpxx -lgmp)
target_link_libraries(tempTest_er graph -lgmpxx -lgmp)
